--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,12 +15,11 @@
             </h1>
         </header>
         <div>
-            <button class="btn btn-primary">
-                Signup
-            </button>
-            <button class="btn btn-primary">
-                Signin
-            </button>
+            <a href="./signup.html">
+                <button class="btn btn-primary">
+                    Signup
+                </button>
+            </a>
         </div>
     </main>
     <h1>
