add signin page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,6 +20,11 @@
                     Signup
                 </button>
             </a>
+            <a href="./signin.html">
+                <button class="btn btn-primary">
+                    Signin
+                </button>
+            </a>
         </div>
     </main>
     <h1>
