add margin top and link to signin

--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center mt-5">
             <div class="col-10 col-md-8 col-lg-4">
                 <header class="mb-4 font-weight-700 font-size-1">
                     CREATE AN ACCOUNT
@@ -41,9 +41,12 @@
                             <input type="tel" class="form-control" id="mobile" placeholder="Enter your mobile number">
                             <div id="mobileError" class="form-text field-error"></div>
                         </div>
-                        <button type="submit" class="btn btn-primary font-weight-700 font-size-1">Create Account</button>
+                        <button type="submit" class="btn btn-primary font-weight-700 font-size-1 mt-4">Create Account</button>
                     </form>
                 </div>
+                <footer class="text-center font-size-3 font-weight-700 mt-5">
+                    ALREADY HAVE AN ACCOUNT? <a href="signin.html">Sign In</a>
+                </footer>
             </div>
         </div>
     </main>
