--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -15,31 +15,31 @@
                     CREATE AN ACCOUNT
                 </header>
                 <div>
-                    <form>
+                    <form class="signup-form">
                         <div class="mb-3 name-container">
                             <label for="name" class="form-label font-weight-700 font-size-2">Name *</label>
-                            <input type="name" class="form-control" id="name" placeholder="Enter your name">
-                            <div id="nameError" class="form-text field-error"></div>
+                            <input type="text" class="form-control" id="name" placeholder="Enter your name" name="name" />
+                            <div class="invalid-feedback"></div>
                         </div>
                         <div class="mb-3 email-container">
                             <label for="email" class="form-label font-weight-700 font-size-2">Email address *</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email address">
-                            <div id="emailError" class="form-text field-error"></div>
+                            <input type="email" class="form-control" id="email" placeholder="Enter your email address" name="email">
+                            <div class="invalid-feedback"></div>
                         </div>
                         <div class="mb-3 password-container">
                             <label for="password" class="form-label font-weight-700 font-size-2">Password *</label>
-                            <input type="password" class="form-control" id="password" placeholder="Enter your password">
-                            <div id="passwordError" class="form-text field-error"></div>
+                            <input type="password" class="form-control" id="password" placeholder="Enter your password" name="password">
+                            <div class="invalid-feedback"></div>
                         </div>
                         <div class="mb-3 dob-container">
                             <label for="dob" class="form-label font-weight-700 font-size-2">Date of Birth</label>
-                            <input type="date" class="form-control" id="dob">
-                            <div id="nameError" class="form-text field-error"></div>
+                            <input type="date" class="form-control" id="dob" name="dob">
+                            <div class="invalid-feedback"></div>
                         </div>
                         <div class="mb-3 mobile-container">
                             <label for="mobile" class="form-label font-weight-700 font-size-2">Mobile Number *</label>
-                            <input type="tel" class="form-control" id="mobile" placeholder="Enter your mobile number">
-                            <div id="mobileError" class="form-text field-error"></div>
+                            <input type="tel" class="form-control" id="mobile" placeholder="Enter your mobile number" name="mob">
+                            <div class="invalid-feedback"></div>
                         </div>
                         <button type="submit" class="btn btn-primary font-weight-700 font-size-1 mt-4">Create Account</button>
                     </form>
@@ -50,5 +50,6 @@
             </div>
         </div>
     </main>
+    <script src="../scripts/js/signup.js" type="module"></script>
 </body>
 </html>
