--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,15 +15,11 @@
             </h1>
         </header>
         <div>
-            <a href="./signup.html">
-                <button class="btn btn-primary">
-                    Signup
-                </button>
+            <a href="./signup.html" role="button" class="btn btn-primary">
+                Signup
             </a>
-            <a href="./signin.html">
-                <button class="btn btn-primary">
-                    Signin
-                </button>
+            <a href="./signin.html" role="button" class="btn btn-primary">
+                Signin
             </a>
         </div>
     </main>
