--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -15,18 +15,22 @@
                     Sign In
                 </header>
                 <div>
-                    <form>
+                    <form class="signin-form">
                         <div class="mb-3 email-container">
                             <label for="email" class="form-label font-weight-700 font-size-2">Email address *</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email address">
-                            <div id="emailError" class="form-text field-error"></div>
+                            <input type="email" class="form-control" id="email" placeholder="Enter your email address" name="email">
                         </div>
                         <div class="mb-3 password-container">
                             <label for="password" class="form-label font-weight-700 font-size-2">Password *</label>
-                            <input type="password" class="form-control" id="password" placeholder="Enter your password">
-                            <div id="passwordError" class="form-text field-error"></div>
+                            <div class="input-group">
+                                <input type="password" class="form-control" id="password" placeholder="Enter your password" name="password">
+                                <span class="input-group-text showPassword-btn">
+                                    <i class="bi bi-eye-slash-fill hide-password-icon" style="display:none"></i>
+                                    <i class="bi bi-eye-fill show-password-icon"></i>
+                                </span>
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-primary font-weight-700 font-size-1">Sign In</button>
+                        <button type="submit" class="btn btn-primary font-weight-700 font-size-1 mt-4">Sign In</button>
                     </form>
                 </div>
                 <footer class="text-center font-size-3 font-weight-700 mt-5">
@@ -35,5 +39,7 @@
             </div>
         </div>
     </main>
+
+    <script src="../scripts/js/signin.js" type="module"></script>
 </body>
 </html>
